# gitmem0

./: .gitignore  CLAUDE.md  README.md  README_zh.md  SKILL.md  config.toml  pyproject.toml
gitmem0/: __init__.py  __main__.py  auto.py  cli.py  client.py  context.py  decay.py  embeddings.py  entities.py  extraction.py  llm_judge.py  metrics.py  migrate.py  models.py  prompt.py  retrieval.py  setup.py  store.py  versioning.py
hooks/: post_response.py  pre_response.py  setup_claude_code.py
tests/: test_gitmem0.py  test_integration.py
