[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitmem0"
version = "0.2.0"
description = "Git × Mem0: A version-controlled memory system for LLMs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
gitmem0 = "gitmem0.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
