[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitmem0"
version = "0.2.0"
description = "Git × Mem0: A version-controlled memory system for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "yy401" },
]
keywords = ["memory", "llm", "ai-agent", "git", "mem0", "persistent-memory", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/yy401/gitmem0"
Repository = "https://github.com/yy401/gitmem0"
Issues = "https://github.com/yy401/gitmem0/issues"

[project.optional-dependencies]
nlp = [
    "spacy>=3.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
gitmem0 = "gitmem0.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
